# wclip

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  Clipboard.cpp  Clipboard.h  Options.cpp  Options.h  main.cpp  version.h.in
tests/: test.bats
